# YoutubeTLDR-Ollama

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
src/: main.rs  markdown_test.md  ollama.rs  subtitle.rs
static/: index.html  script.js  style.css
